--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -77,9 +77,9 @@
             <picture class="js-pic">
                 <source media="(max-width: 640px)" srcset="imagens/p/mockup1-p.jpg" type="image/jpg">
         
-                <source media="(max-width: 1280px)" srcset="imagens/m/mockup1-m.jpg">
+                <source media="(max-width: 1280px)" srcset="imagens/m/mockup1-m.jpg" type="image/jpg">
         
-                <img src="imagens/g/mockup1-g.jpg" alt="">
+                <img src="imagens/g/mockup1-g.jpg" alt="mockup1">
             </picture>
             <div class="social">
                 <div class="js-pic">
