--- a/pags/secundarias/projetos/descripti/descripti.html
+++ b/pags/secundarias/projetos/descripti/descripti.html
@@ -100,11 +100,6 @@
                 <img src="imagens/g/pattern-g.jpg" alt="cartao">
             </picture>
             <picture class="js-pic">
-                <source media="(max-width: 640px)" srcset="imagens/p/user-interface-p.jpg" type="image/jpg">
-                <source media="(max-width: 1280px)" srcset="imagens/m/user-interface-m.jpg" type="image/jpg">
-                <img src="imagens/g/user-interface-g.jpg" alt="cartao">
-            </picture>
-            <picture class="js-pic">
                 <source media="(max-width: 640px)" srcset="imagens/p/logo-p.jpg" type="image/jpg">
                 <source media="(max-width: 1280px)" srcset="imagens/m/logo-m.jpg" type="image/jpg">
                 <img src="imagens/g/logo-g.jpg" alt="cartao">
@@ -135,6 +130,11 @@
                     </picture>
                 </div>
             </div>
+            <picture class="js-pic">
+                <source media="(max-width: 640px)" srcset="imagens/p/app-p.jpg" type="image/jpg">
+                <source media="(max-width: 1280px)" srcset="imagens/m/app-m.jpg" type="image/jpg">
+                <img src="imagens/g/app-g.jpg" alt="cartao">
+            </picture>
         </div>
     </section>
     <section id="cta">
