--- a/pags/secundarias/projetos/descripti/descripti.html
+++ b/pags/secundarias/projetos/descripti/descripti.html
@@ -77,7 +77,43 @@
             <picture class="js-pic">
                 <source media="(max-width: 640px)" srcset="imagens/p/altdoor2-p.jpg" type="image/jpg">
                 <source media="(max-width: 1280px)" srcset="imagens/m/altdoor2-m.jpg" type="image/jpg">
-                <img src="imagens/g/altdoor2-g.jpg" alt="cartao">
+                <img src="imagens/g/altdoor2-g.jpg" alt="altdoor2">
+            </picture>
+            <picture class="js-pic">
+                <source media="(max-width: 640px)" srcset="imagens/p/app-p.jpg" type="image/jpg">
+                <source media="(max-width: 1280px)" srcset="imagens/m/app-m.jpg" type="image/jpg">
+                <img src="imagens/g/app-g.jpg" alt="app">
+            </picture>
+            <div class="social">
+                <div>
+                    <picture class="js-pic">
+                        <source media="(max-width: 640px)" srcset="imagens/p/social1-p.jpg" type="image/jpg">
+                        <source media="(max-width: 1280px)" srcset="imagens/m/social1-m.jpg" type="image/jpg">
+                        <img src="imagens/g/social1-g.jpg" alt="social1">
+                    </picture>
+                    <picture class="js-pic">
+                        <source media="(max-width: 640px)" srcset="imagens/p/social2-p.jpg" type="image/jpg">
+                        <source media="(max-width: 1280px)" srcset="imagens/m/social2-m.jpg" type="image/jpg">
+                        <img src="imagens/g/social2-g.jpg" alt="social2">
+                    </picture>
+                </div>
+                <div>
+                    <picture class="js-pic">
+                        <source media="(max-width: 640px)" srcset="imagens/p/social3-p.jpg" type="image/jpg">
+                        <source media="(max-width: 1280px)" srcset="imagens/m/social3-m.jpg" type="image/jpg">
+                        <img src="imagens/g/social3-g.jpg" alt="social3">
+                    </picture>
+                    <picture class="js-pic">
+                        <source media="(max-width: 640px)" srcset="imagens/p/social4-p.jpg" type="image/jpg">
+                        <source media="(max-width: 1280px)" srcset="imagens/m/social4-m.jpg" type="image/jpg">
+                        <img src="imagens/g/social4-g.jpg" alt="social4">
+                    </picture>
+                </div>
+            </div>
+            <picture class="js-pic">
+                <source media="(max-width: 640px)" srcset="imagens/p/logo-p.jpg" type="image/jpg">
+                <source media="(max-width: 1280px)" srcset="imagens/m/logo-m.jpg" type="image/jpg">
+                <img src="imagens/g/logo-g.jpg" alt="logo">
             </picture>
             <picture class="js-pic">
                 <source media="(max-width: 640px)" srcset="imagens/p/cartao-p.jpg" type="image/jpg">
@@ -85,55 +121,19 @@
                 <img src="imagens/g/cartao-g.jpg" alt="cartao">
             </picture>
             <picture class="js-pic">
+                <source media="(max-width: 640px)" srcset="imagens/p/pattern-p.jpg" type="image/jpg">
+                <source media="(max-width: 1280px)" srcset="imagens/m/pattern-m.jpg" type="image/jpg">
+                <img src="imagens/g/pattern-g.jpg" alt="pattern">
+            </picture>
+            <picture class="js-pic">
                 <source media="(max-width: 640px)" srcset="imagens/p/altdoor-p.png" type="image/png">
                 <source media="(max-width: 1280px)" srcset="imagens/m/altdoor-m.png" type="image/png">
-                <img src="imagens/g/altdoor-g.png" alt="cartao">
+                <img src="imagens/g/altdoor-g.png" alt="altdoor">
             </picture>
             <picture class="js-pic">
                 <source media="(max-width: 640px)" srcset="imagens/p/icon-p.jpg" type="image/jpg">
                 <source media="(max-width: 1280px)" srcset="imagens/m/icon-m.jpg" type="image/jpg">
-                <img src="imagens/g/icon-g.jpg" alt="cartao">
-            </picture>
-            <picture class="js-pic">
-                <source media="(max-width: 640px)" srcset="imagens/p/pattern-p.jpg" type="image/jpg">
-                <source media="(max-width: 1280px)" srcset="imagens/m/pattern-m.jpg" type="image/jpg">
-                <img src="imagens/g/pattern-g.jpg" alt="cartao">
-            </picture>
-            <picture class="js-pic">
-                <source media="(max-width: 640px)" srcset="imagens/p/logo-p.jpg" type="image/jpg">
-                <source media="(max-width: 1280px)" srcset="imagens/m/logo-m.jpg" type="image/jpg">
-                <img src="imagens/g/logo-g.jpg" alt="cartao">
-            </picture>
-            <div class="social">
-                <div>
-                    <picture class="js-pic">
-                        <source media="(max-width: 640px)" srcset="imagens/p/social1-p.jpg" type="image/jpg">
-                        <source media="(max-width: 1280px)" srcset="imagens/m/social1-m.jpg" type="image/jpg">
-                        <img src="imagens/g/social1-g.jpg" alt="cartao">
-                    </picture>
-                    <picture class="js-pic">
-                        <source media="(max-width: 640px)" srcset="imagens/p/social2-p.jpg" type="image/jpg">
-                        <source media="(max-width: 1280px)" srcset="imagens/m/social2-m.jpg" type="image/jpg">
-                        <img src="imagens/g/social2-g.jpg" alt="cartao">
-                    </picture>
-                </div>
-                <div>
-                    <picture class="js-pic">
-                        <source media="(max-width: 640px)" srcset="imagens/p/social3-p.jpg" type="image/jpg">
-                        <source media="(max-width: 1280px)" srcset="imagens/m/social3-m.jpg" type="image/jpg">
-                        <img src="imagens/g/social3-g.jpg" alt="cartao">
-                    </picture>
-                    <picture class="js-pic">
-                        <source media="(max-width: 640px)" srcset="imagens/p/social4-p.jpg" type="image/jpg">
-                        <source media="(max-width: 1280px)" srcset="imagens/m/social4-m.jpg" type="image/jpg">
-                        <img src="imagens/g/social4-g.jpg" alt="cartao">
-                    </picture>
-                </div>
-            </div>
-            <picture class="js-pic">
-                <source media="(max-width: 640px)" srcset="imagens/p/app-p.jpg" type="image/jpg">
-                <source media="(max-width: 1280px)" srcset="imagens/m/app-m.jpg" type="image/jpg">
-                <img src="imagens/g/app-g.jpg" alt="cartao">
+                <img src="imagens/g/icon-g.jpg" alt="icon">
             </picture>
         </div>
     </section>
