--- a/pags/secundarias/projetos/descripti/descripti.html
+++ b/pags/secundarias/projetos/descripti/descripti.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="../../../../padrao-esplee/padrao-esplee.css">
 
     <!--Padrão Mobile-->
-    <link rel="stylesheet" href="css/style.css" media="all">
+    <link rel="stylesheet" href="../css/style.css" media="all">
 
     <!--Versão Tablet-->
-    <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 640px)">
+    <link rel="stylesheet" href="../css/tablet.css" media="screen and (min-width: 640px)">
 
     <!--Versão Desktop-->
-    <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1280px)">
+    <link rel="stylesheet" href="../css/desktop.css" media="screen and (min-width: 1280px)">
+
+    <!--CSS Local-->
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
