--- a/pags/secundarias/projetos/descripti/descripti.html
+++ b/pags/secundarias/projetos/descripti/descripti.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../css/desktop.css" media="screen and (min-width: 1280px)">
 
     <!--CSS Local-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -149,7 +149,6 @@
     </section>
     <footer></footer>
     <script src="../../../../padrao-esplee/jquery-3.6.0.js"></script>
-    <script src="../../../../padrao-esplee/padrao-esplee.js"></script>
-    <script src="js/script-descripti.js"></script>
+    <script src="script-descripti.js"></script>
 </body>
 </html>
