--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="../../../../padrao-esplee/padrao-esplee.css">
 
     <!--Padrão Mobile-->
-    <link rel="stylesheet" href="../tango/css/style.css" media="all">
+    <link rel="stylesheet" href="../css/style.css" media="all">
 
     <!--Versão Tablet-->
-    <link rel="stylesheet" href="css/tablet.css" media="screen and (min-width: 640px)">
+    <link rel="stylesheet" href="../css/tablet.css" media="screen and (min-width: 640px)">
 
     <!--Versão Desktop-->
-    <link rel="stylesheet" href="css/desktop.css" media="screen and (min-width: 1280px)">
+    <link rel="stylesheet" href="../css/desktop.css" media="screen and (min-width: 1280px)">
+
+    <!--CSS Local-->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -177,7 +180,6 @@
     </section>
     <footer></footer>
     <script src="../../../../padrao-esplee/jquery-3.6.0.js"></script>
-    <script src="../../../../padrao-esplee/padrao-esplee.js"></script>
-    <script src="js/script-tango.js"></script>
+    <script src="script-tango.js"></script>
 </body>
 </html>
