--- a/testes/menu-mobile.html
+++ b/testes/menu-mobile.html
@@ -22,11 +22,11 @@
             transition: 1s;
             display: block;
             position: absolute;
-            top: 48px;
+            top: 0px;
             right: 0px;
 
             width: 250px;
-            height: calc(100% - 128px);
+            height: calc(100% - 80px);
             background-color: rgb(24, 0, 46);
 
             padding: 80px 0px 0px 30px;
@@ -35,7 +35,16 @@
             transition: 1s;
             transform: translateX(300px);
         }
+        .background{
+            display: none;
+            position: absolute;
+            top: 0px;
+            left: 0px;
 
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 255, 255, 0.292);
+        }
         .links{
             display: flex;
             flex-direction: column;
@@ -63,7 +72,8 @@
             <a href="#"><img src="../imagens/icon/light-menu.svg" alt="menu-ico"></a>
         </div>
     </nav>
-        <div class="content">
+        <div class="background"></div>
+        <div class="content hide">
             <div class="cancel">
                 <a href="#">
                     <img src="../imagens/icon/light-cancel.svg" alt="cancel">
@@ -76,14 +86,13 @@
                 <a href="#">Contato</a>
             </div>
         </div>
+        
     <script src="../padrao-esplee/jquery-3.6.0.js"></script>
     <script>
         $(document).ready(function(){
-            $('#nav-menu-ico').click(function(){
+            $('#nav-menu-ico, .cancel, .background').click(function(){
                 $('.content').toggleClass('hide');
-            })
-            $('.cancel').click(function(){
-                $('.content').toggleClass('hide');
+                $('.background').fadeToggle();
             })
         })
     </script>
