--- a/pags/index/index.html
+++ b/pags/index/index.html
@@ -7,6 +7,7 @@
 
     <!-- Estilo Pai-->
     <link rel="stylesheet" href="../../padrao-esplee/padrao-esplee.css">
+    
     <!-- Estilo Filho-->
     <link rel="stylesheet" href="index.css">
 
@@ -26,7 +27,16 @@
                     <a href="../secundarias/contato/contato.html">Contato</a>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
-                    <a href="#"><img src="../../imagens/icon/light-menu.svg" alt="menu-ico"></a>
+                    <a href="#"><img id="img-cancel" src="../../imagens/icon/light-menu.svg" alt="menu-ico"></a>
+                </div>
+                <div class="background"></div>
+                <div class="navbar">
+                    <div class="links">
+                        <a href="#">Na Rota</a>
+                        <a href="#">Projeto</a>
+                        <a href="#">Sobre Nós</a>
+                        <a href="#">Contato</a>
+                    </div>
                 </div>
             </nav>
             <div id="header-headings">
