--- a/testes/menu-mobile.html
+++ b/testes/menu-mobile.html
@@ -19,10 +19,10 @@
                 padding: 32px;
                 width: 32px;
             }
+
             #nav-menu-ico{
-                z-index: 1;
-            }
-        .content{
+                z-index: 1;}
+        .navbar{
             transition: 1s;
             display: block;
             position: absolute;
@@ -34,43 +34,31 @@
             padding: 80px 0px 0px 0px;
 
             height: calc(100% - 80px);
-            background-color: rgb(24, 0, 46);
-        }
-            .show{
-                transition: 1s;
-                opacity: 1;
-                padding: 80px 0px 0px 30px;
-                width: 250px;
-            }
-            .background{
-                display: none;
-                position: absolute;
-                top: 0px;
-                left: 0px;
+            background-color: rgb(24, 0, 46);}
+        .background{
+            display: none;
+            position: absolute;
+            top: 0px;
+            left: 0px;
 
-                width: 100%;
-                height: 100%;
-                background-color: rgba(23, 0, 39, 0.517);
-            }
+            width: 100%;
+            height: 100%;
+            background-color: rgba(23, 0, 39, 0.517);}
             .links{
                 display: flex;
                 flex-direction: column;
-                gap: 1.5rem;
-            }
+                gap: 1.5rem;}
                 .links a{
                     display: none;
                     font-size: 21px;
                     font-weight: 600;
                     text-decoration: none;
-                    color: azure;
-                }
-                .cancel{
-                    display: block;
-                    width: 32px;
-                    position: absolute;
-                    right: 32px;
-                    top: 32px;
-                }
+                    color: azure;}
+        .show{
+            transition: 1s;
+            opacity: 1;
+            padding: 80px 0px 0px 30px;
+            width: 60vw;}
     </style>
 </head>
 <body>
@@ -82,28 +70,30 @@
             <a href="#"><img id="img-cancel" src="../imagens/icon/light-menu.svg" alt="menu-ico"></a>
         </div>
     </nav>
-        <div class="background"></div>
-        <div class="content">
-            <div class="links">
-                <a href="#">Na Rota</a>
-                <a href="#">Projeto</a>
-                <a href="#">Sobre Nós</a>
-                <a href="#">Contato</a>
-            </div>
+
+    <div class="background"></div>
+    <div class="navbar">
+        <div class="links">
+            <a href="#">Na Rota</a>
+            <a href="#">Projeto</a>
+            <a href="#">Sobre Nós</a>
+            <a href="#">Contato</a>
         </div>
+    </div>
         
     <script src="../padrao-esplee/jquery-3.6.0.js"></script>
     <script>
         $(document).ready(function(){
             $('#nav-menu-ico, .background').click(function(){
                 let img = document.querySelector('#img-cancel');
-                $('.content').toggleClass('show');
+                $('.navbar').toggleClass('show');
                 $('.background').fadeToggle(1000);
 
-                if($('.content').hasClass('show') == true){
+                if($('.navbar').hasClass('show') == true){
                     $('.links a').fadeToggle(900);
                     img.src = '../imagens/icon/light-cancel.svg'
-                }else{
+                }
+                else{
                     $('.links a').fadeToggle(400);
                     img.src = '../imagens/icon/light-menu.svg'
                 }
