--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -23,7 +23,7 @@
 <body>
     <header>
         <div id="header-content">
-            <div class="nav">
+            <nav>
                 <div class="icon">
                     <a href="#" rel="back">
                         <img src="imagens/light-arrow-left.svg" alt="voltar">
@@ -36,9 +36,18 @@
                     <a href="../secundarias/contato/contato.html">Contato</a>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
-                    <a href="#"><img src="imagens/light-menu.svg" alt="menu-ico"></a>
+                    <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
                 </div>
-            </div>
+                <div class="background"></div>
+                <div class="navbar">
+                    <div class="links">
+                        <a href="#">Na Rota</a>
+                        <a href="#">Projeto</a>
+                        <a href="#">Sobre Nós</a>
+                        <a href="#">Contato</a>
+                    </div>
+                </div>
+            </nav>
         </div>
     </header>
     <main>
