--- a/pags/secundarias/projetos/descripti/descripti.html
+++ b/pags/secundarias/projetos/descripti/descripti.html
@@ -40,6 +40,11 @@
                     </div>
                     <div class="background"></div>
                     <div class="navbar">
+                        <div class="navbar-icon">
+                            <div class="nav-ico">
+                                <img src="imagens/light-cancel.svg" alt="">
+                            </div>
+                        </div>
                         <div class="links">
                             <a href="#">Na Rota</a>
                             <a href="#">Projeto</a>
@@ -133,11 +138,6 @@
                 <img src="imagens/g/cartao-g.jpg" alt="cartao">
             </picture>
             <picture class="js-pic">
-                <source media="(max-width: 640px)" srcset="imagens/p/pattern-p.jpg" type="image/jpg">
-                <source media="(max-width: 1280px)" srcset="imagens/m/pattern-m.jpg" type="image/jpg">
-                <img src="imagens/g/pattern-g.jpg" alt="pattern">
-            </picture>
-            <picture class="js-pic">
                 <source media="(max-width: 640px)" srcset="imagens/p/altdoor-p.png" type="image/png">
                 <source media="(max-width: 1280px)" srcset="imagens/m/altdoor-m.png" type="image/png">
                 <img src="imagens/g/altdoor-g.png" alt="altdoor">
@@ -146,6 +146,16 @@
                 <source media="(max-width: 640px)" srcset="imagens/p/icon-p.jpg" type="image/jpg">
                 <source media="(max-width: 1280px)" srcset="imagens/m/icon-m.jpg" type="image/jpg">
                 <img src="imagens/g/icon-g.jpg" alt="icon">
+            </picture>       
+            <picture class="js-pic">
+                <source media="(max-width: 640px)" srcset="imagens/p/poster-p.jpg" type="image/jpg">
+                <source media="(max-width: 1280px)" srcset="imagens/m/poster-m.jpg" type="image/jpg">
+                <img src="imagens/g/poster-g.jpg" alt="icon">
+            </picture>
+            <picture class="js-pic">
+                <source media="(max-width: 640px)" srcset="imagens/p/mobile2-p.png" type="image/png">
+                <source media="(max-width: 1280px)" srcset="imagens/m/mobile2-m.png" type="image/png">
+                <img src="imagens/g/mobile2-g.jpg" alt="icon">
             </picture>
         </div>
     </section>
