--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -40,6 +40,11 @@
                 </div>
                 <div class="background"></div>
                 <div class="navbar">
+                    <div class="navbar-icon">
+                        <div class="nav-ico">
+                            <img src="imagens/light-cancel.svg" alt="">
+                        </div>
+                    </div>
                     <div class="links">
                         <a href="#">Na Rota</a>
                         <a href="#">Projeto</a>
