--- a/pags/secundarias/projetos/descripti/descripti.html
+++ b/pags/secundarias/projetos/descripti/descripti.html
@@ -49,7 +49,7 @@
                             <a href="#">Na Rota</a>
                             <a href="#">Projeto</a>
                             <a href="#">Sobre Nós</a>
-                            <a href="#">Contato</a>
+                            <a href="../../contato/contato.html">Contato</a>
                         </div>
                     </div>
                 </nav>
@@ -161,12 +161,20 @@
     </section>
     <section id="cta">
         <div class="content">
-            <a href="#" rel="back">
-                <button class="outline-dark">+Cases</button>
+            <h2>Pronto para começar um projeto?</h2>
+            <p>Estamos aqui para te ajudar nessa jornada</p>
+            <a href="../../contato/contato.html" rel="back">
+                <button class="primario">Começar projeto</button>
             </a>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <img class="logo-footer" src="imagens/dark-principal_1.svg" alt="logo-footer">
+        <div class="nav-footer">
+            <div class="icon-footer"></div>
+            <div class="icon-footer"></div>
+        </div>
+    </footer>
     <script src="../../../../padrao-esplee/jquery-3.6.0.js"></script>
     <script src="script-descripti.js"></script>
 </body>
