--- a/pags/secundarias/contato/contato.html
+++ b/pags/secundarias/contato/contato.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../../padrao-esplee.css">
+    <link rel="stylesheet" href="../../../padrao-esplee/padrao-esplee.css">
     <link rel="stylesheet" href="contato.css">
 
     <title>Contato</title>
@@ -15,7 +15,7 @@
         <div id="header-content">
             <nav>
                 <div class="nav-ico" id="nav-ico-logo">
-                    <a href="../../index/index.html"><img src="../../imagens/logos/SVG/Simbolo.svg" alt="nav-logo"></a>
+                    <a href="index.html"><img src="imagens/simbolo.svg" alt="nav-logo"></a>
                 </div>
                 <div id="nav-links">
                     <a href="#">Na Rota</a>
@@ -24,20 +24,34 @@
                     <a href="contato.html">Contato</a>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
-                    <a href="#"><img src="../../imagens/icon/light-menu.svg" alt="menu-ico"></a>
+                    <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
+                </div>
+                <div class="background"></div>
+                <div class="navbar">
+                    <div class="navbar-icon">
+                        <div class="nav-ico">
+                            <img src="imagens/light-cancel.svg" alt="">
+                        </div>
+                    </div>
+                    <div class="links">
+                        <a href="#">Na Rota</a>
+                        <a href="#">Projeto</a>
+                        <a href="#">Sobre Nós</a>
+                        <a href="contato.html">Contato</a>
+                    </div>
                 </div>
             </nav>
             <div id="contato-header-heading">
                 <div id="nav2">
                     <a href="../../index/index.html">Home</a>
-                    <img src="../../imagens/icon/light-arrow-right.svg" alt="seta-direita">
-                    <a href=".././contato/contato.html">Contato</a>
+                    <img src="imagens/light-arrow-right.svg" alt="seta-direita">
+                    <a href="contato.html">Contato</a>
                 </div>
                 <h1>Você está quase lá</h1>
                 <p>Manda um oi pra agendarmos uma reunião</p>
             </div>
             <div id="seta">
-                <img src="../../imagens/icon/light-arrow-down.svg" alt="seta-baixo">
+                <img src="imagens/light-arrow-down.svg" alt="seta-baixo">
             </div>
         </div>
     </header>
@@ -68,5 +82,7 @@
             </form>
         </div>
     </main>
+    <script src="../../../padrao-esplee/jquery-3.6.0.js"></script>
+    <script src="contato.js"></script>
 </body>
 </html>
