--- a/pags/secundarias/projetos/projetos.html
+++ b/pags/secundarias/projetos/projetos.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos</title>
+    <link rel="stylesheet" href="../../../padrao-esplee/padrao-esplee.css">
+
+    <link rel="stylesheet" href="projetos.css">
 </head>
 <body>
     <main>
         <div class="card">
-            <div class="img">
-
+            <div class="imagem-card">
             </div>
-            <div class="content">
+            <div class="card-content">
+                <h1>Project</h1>
                 <div class="tags">
-                    <div class="tag"></div>
+                    <div class="tag">teste</div>
+                    <div class="tag">teste</div>
+                    <div class="tag">teste</div>
+                    <div class="tag">teste</div>
                 </div>
                 <div class="txt">
-                    
+                    <p>Lorem ipsum dolor sit, amet consectetur adia excepturi numquam odio, itaque...</p>
                 </div>
+                <a href="#"><button>Visitar</button></a>
             </div>
-            <button>Visitar</button>
         </div>
     </main>
 </body>
