--- a/pags/secundarias/projetos/descripti/descripti.html
+++ b/pags/secundarias/projetos/descripti/descripti.html
@@ -32,9 +32,9 @@
                     </div>
                     <div id="nav-links">
                         <a href="#">Na Rota</a>
-                        <a href="#">Projeto</a>
+                        <a href="../projetos.html">Projeto</a>
                         <a href="#">Sobre Nós</a>
-                        <a href="../secundarias/contato/contato.html">Contato</a>
+                        <a href="../../contato/contato.html">Contato</a>
                     </div>
                     <div class="nav-ico" id="nav-menu-ico">
                         <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
@@ -48,7 +48,7 @@
                         </div>
                         <div class="links">
                             <a href="#">Na Rota</a>
-                            <a href="#">Projeto</a>
+                            <a href="../projetos.html">Projeto</a>
                             <a href="#">Sobre Nós</a>
                             <a href="../../contato/contato.html">Contato</a>
                         </div>
@@ -93,14 +93,14 @@
     <section class="galery">
         <div class="galery">
             <picture class="js-pic">
-                <source media="(max-width: 640px)" srcset="imagens/p/altdoor2-p.jpg" type="image/jpg">
-                <source media="(max-width: 1280px)" srcset="imagens/m/altdoor2-m.jpg" type="image/jpg">
-                <img src="imagens/g/altdoor2-g.jpg" alt="altdoor2">
-            </picture>
-            <picture class="js-pic">
                 <source media="(max-width: 640px)" srcset="imagens/p/app-p.jpg" type="image/jpg">
                 <source media="(max-width: 1280px)" srcset="imagens/m/app-m.jpg" type="image/jpg">
                 <img src="imagens/g/app-g.jpg" alt="app">
+            </picture>
+            <picture class="js-pic">
+                <source media="(max-width: 640px)" srcset="imagens/p/altdoor2-p.jpg" type="image/jpg">
+                <source media="(max-width: 1280px)" srcset="imagens/m/altdoor2-m.jpg" type="image/jpg">
+                <img src="imagens/g/altdoor2-g.jpg" alt="altdoor2">
             </picture>
             <div class="social">
                 <div>
@@ -177,6 +177,7 @@
         </div>
     </footer>
     <script src="../../../../padrao-esplee/jquery-3.6.0.js"></script>
-    <script src="script-descripti.js"></script>
+    <script src="../../../../padrao-esplee/padrao-esplee.js"></script>
+    <script src="../projetos.js"></script>
 </body>
 </html>
