--- a/pags/secundarias/projetos/tango/tango.html
+++ b/pags/secundarias/projetos/tango/tango.html
@@ -31,9 +31,9 @@
                 </div>
                 <div id="nav-links">
                     <a href="#">Na Rota</a>
-                    <a href="#">Projeto</a>
+                    <a href="../projetos.html">Projeto</a>
                     <a href="#">Sobre Nós</a>
-                    <a href="../secundarias/contato/contato.html">Contato</a>
+                    <a href="../../contato/contato.html">Contato</a>
                 </div>
                 <div class="nav-ico" id="nav-menu-ico">
                     <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
@@ -47,7 +47,7 @@
                     </div>
                     <div class="links">
                         <a href="#">Na Rota</a>
-                        <a href="#">Projeto</a>
+                        <a href="../projetos.html">Projeto</a>
                         <a href="#">Sobre Nós</a>
                         <a href="../../contato/contato.html">Contato</a>
                     </div>
@@ -203,6 +203,7 @@
         </div>
     </footer>
     <script src="../../../../padrao-esplee/jquery-3.6.0.js"></script>
-    <script src="script-tango.js"></script>
+    <script src="../../../../padrao-esplee/padrao-esplee.js"></script>
+    <script src="../projetos.js"></script>
 </body>
 </html>
