--- a/pags/secundarias/projetos/projetos.html
+++ b/pags/secundarias/projetos/projetos.html
@@ -25,9 +25,16 @@
                 <div class="txt">
                     <p>Lorem ipsum dolor sit, amet consectetur adia excepturi numquam odio, itaque...</p>
                 </div>
-                <a href="#"><button>Visitar</button></a>
+                <button class="secundario-light">Visitar</button>
             </div>
         </div>
     </main>
+    <footer>
+        <img class="logo-footer" src="img/dark-principal_1.svg" alt="logo-footer">
+        <div class="nav-footer">
+            <div class="icon-footer"></div>
+            <div class="icon-footer"></div>
+        </div>
+    </footer>
 </body>
 </html>
