--- a/pags/index/index.html
+++ b/pags/index/index.html
@@ -129,20 +129,38 @@
                 <h2>Como fazemos</h2>
             </div>
             <h3>Marcas fortes não surgem do nada</h3>
+            <div class="help">
+                <p>Toque abaixo</p>
+                <img src="imagens/dark-arrow-down.svg" alt="">
+            </div>
             <div class="passos">
-                <div class="cont">
-                    <div class="itens">
-                        <div class="item"><p>01.</p></div>
-                        <div class="item"><p>02.</p></div>
-                        <div class="item"><p>03.</p></div>
-                        <div class="item"><p>04.</p></div>
-                        <div class="item"><p>05.</p></div>
-                    </div>
-                    <div class="barra"></div>
-                    <div class="barra full"></div>
+                <div class="itens">
+                    <div class="item"><p>01.</p></div>
+                    <div class="item"><p>02.</p></div>
+                    <div class="item"><p>03.</p></div>
+                    <div class="item"><p>04.</p></div>
+                    <div class="item"><p>05.</p></div>
                 </div>
-                <h4 class="header">Entender o problema</h4>
-                <p class="text">De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos precisam ter a consiência do problema atual.</p>
+                <div class="passo n1">
+                    <h4 class="header">Entender o problema</h4>
+                    <p class="text">De nada adianta começar um projeto com o passo esquerdo. Para que uma marca ser única é preciso que todos os envolvidos precisam ter a consiência do problema atual.</p>
+                </div>
+                <div class="passo n2">
+                    <h4 class="header">n2</h4>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum labore magni veritatis facilis similique obcaecati exercitationem delectus explicabo. Sit, ea magni! Ratione nesciunt illo placeat ad magni aliquid, nemo voluptates.</p>
+                </div>
+                <div class="passo n3">
+                    <h4 class="header">n3</h4>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum labore magni veritatis facilis similique obcaecati exercitationem delectus explicabo. Sit, ea magni! Ratione nesciunt illo placeat ad magni aliquid, nemo voluptates.</p>
+                </div>
+                <div class="passo n4">
+                    <h4 class="header">n4</h4>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum labore magni veritatis facilis similique obcaecati exercitationem delectus explicabo. Sit, ea magni! Ratione nesciunt illo placeat ad magni aliquid, nemo voluptates.</p>
+                </div>
+                <div class="passo n5">
+                    <h4 class="header">n5</h4>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum labore magni veritatis facilis similique obcaecati exercitationem delectus explicabo. Sit, ea magni! Ratione nesciunt illo placeat ad magni aliquid, nemo voluptates.</p>
+                </div>
             </div>  
         </div>
         <div class="triang bottom right"></div>
