--- a/pags/index/index.html
+++ b/pags/index/index.html
@@ -185,6 +185,8 @@
         </div>
     </section>
     <section id="pt6">
+        <div class="triang top right"></div>
+        <div class="triang top left"></div>
         <div class="content">
             <h2>Duvidas frequentes</h2>
         </div>
